Scrapped the decrease/reset buttons, shifting towards an actual clicker game, hopefully also fixed multiplier so that it works and removed -5 +5 buttons too.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Times, sans-serif;
     color:black;
     display: flex;
     justify-content: center;
@@ -8,6 +8,7 @@ body {
 }
 
 .container {
+    font-family: Times;
     text-align: center;
 }
 
